--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-debug=true
+#debug=true
