--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/Spring_DB
+spring.datasource.url=jdbc:mysql://localhost:3306/Spring_DB
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8081
+server.servlet.contextPath=/api/v1/spring-bank
 #debug=true
