Update exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8081
 server.servlet.contextPath=/api/v1/spring-bank
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/docs
 #debug=true
